<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLayoutGameInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameDetails" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvDetGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/gameNameFontSize"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <ImageView
            android:id="@+id/imVwDetGame"
            android:layout_width="@dimen/gameDetImageSize"
            android:layout_height="@dimen/gameDetImageSize"
            android:contentDescription="@string/NoImgFound" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReleaseDate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetReleaseDateVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetPlatform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetPlatformVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGenres"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetGenresVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGameRating"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetRatingVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDeveloper"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetDeveloperVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <TextView
            android:id="@+id/tvDetPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPublisher"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetPublisherVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/gamesListLeftTopMar" >

        <Button
            android:id="@+id/btnAddWishList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAddWishList" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnRemWishList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRemWishList" />
        
    </TableRow>
    
</LinearLayout>
