<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imWLVwThumbNail"
        android:layout_width="@dimen/thumbNailImageSize"
        android:layout_height="@dimen/thumbNailImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/gamesListLeftTopMar"
        android:layout_marginTop="@dimen/gamesListLeftTopMar"
        android:contentDescription="@string/NoImgFound" />

    <TextView
        android:id="@+id/tvWLListGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imWLVwThumbNail"
        android:layout_marginLeft="@dimen/gamesListLeftTopMar"
        android:layout_toRightOf="@+id/imWLVwThumbNail"
        android:textSize="@dimen/gameNameFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWLListReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvWLListGameName"
        android:layout_below="@+id/tvWLListGameName"
        android:layout_marginTop="@dimen/homeScreenRowTopMargin"
        android:text="@string/tvReleaseDate"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWLPlatforms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/homeScreenRowTopMargin"
        android:layout_alignLeft="@+id/tvWLListReleaseDate"
        android:layout_below="@+id/tvWLListReleaseDate"
        android:text="@string/platform"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWLListRelDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvWLListReleaseDate"
        android:layout_toRightOf="@+id/tvWLListReleaseDate"
        android:layout_marginLeft="@dimen/homeScreenMar" />

    <TextView
        android:id="@+id/tvWLListPlatformValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvWLPlatforms"
        android:layout_alignLeft="@+id/tvWLListRelDateValue" />

</RelativeLayout>
