<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvListGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/gamesListLeftTopMar"
        android:textSize="@dimen/gameNameFontSize"
        android:textStyle="bold"
        android:textColor="@color/colGreen" />
    
    <TextView
        android:id="@+id/tvListReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvListGameName"
        android:layout_marginLeft="@dimen/gamesListTopMar2"
        android:layout_marginTop="@dimen/reviewLeftMargin"
        android:text="@string/tvReview"
        android:textStyle="bold"
        android:textColor="@color/colBlue" />
    
    <TextView
        android:id="@+id/tvRevPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/homeScreenTopMar"
        android:layout_alignLeft="@+id/tvListReview"
        android:layout_below="@+id/tvListReview"
        android:text="@string/platform"
        android:textStyle="bold"
        android:textColor="@color/colBlue" />
    
    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvRevPlatform"
        android:layout_below="@+id/tvRevPlatform"
        android:layout_marginTop="@dimen/gamesListTopMar2"
        android:text="@string/tvScore"
        android:textStyle="bold"
        android:textColor="@color/colBlue" />

    <TextView
        android:id="@+id/tvReviewVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvListReview"
        android:layout_alignBottom="@+id/tvListReview"
        android:layout_toRightOf="@+id/tvListReview" />

    <TextView
        android:id="@+id/tvRevPlatformVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRevPlatform"
        android:layout_alignBottom="@+id/tvRevPlatform"
        android:layout_toRightOf="@+id/tvRevPlatform" />

    <TextView
        android:id="@+id/tvRevScoreVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvScore"
        android:layout_alignBottom="@+id/tvScore"
        android:layout_toRightOf="@+id/tvScore" />
    
</RelativeLayout>